# xstatic-angular-bootstrap

./: .gitignore  .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py  tox.ini
xstatic/pkg/angular_bootstrap/: __init__.py
