[metadata]
name = XStatic-Angular-Bootstrap
summary = Angular-Bootstrap 0.11.0 (XStatic packaging standard)
description-file = README.rst
maintainer = Maxime Vidori
maintainer-email = maxime.vidori@enovance.com
home-page = http://angular-ui.github.io/bootstrap/
keywords = angular_bootstrap xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
