[metadata]
name = XStatic-Angular-Bootstrap
description = Angular-Bootstrap 1.3.3 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://angular-ui.github.io/bootstrap/
keywords = angular_bootstrap xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
