[metadata]
name = XStatic-Angular-Bootstrap
description = Angular-Bootstrap 2.5.0 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = http://angular-ui.github.io/bootstrap/
keywords = angular_bootstrap xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
